.config/xmobar/secondary.errors

secondary.hs:12:19: error:
    lexical error in string/character literal at character '\62959'
   |
12 |         Run Date "  %d %b %Y %H:%M " "date" 600,
   |                   ^
